hphp/hack/test/typecheck/reactive/mut_collections/mut_capture2.php.exp
File "mut_capture2.php", line 12, characters 5-6:
Neither a `Mutable` nor `MaybeMutable` object may be captured by an anonymous function. (Typing[4283])
File "mut_capture2.php", line 20, characters 5-6:
Neither a `Mutable` nor `MaybeMutable` object may be captured by an anonymous function. (Typing[4283])
File "mut_capture2.php", line 28, characters 7-8:
Neither a `Mutable` nor `MaybeMutable` object may be captured by an anonymous function. (Typing[4283])
